Fix misaligned sections when they're wrapped
Use equal left & right margins and let flexbox space-around do its thing.

--- a/app/styles/nav.less
+++ b/app/styles/nav.less
@@ -14,8 +14,8 @@
     .hover-underline;
   }
 
-  > * + * {
-    margin-left: 1.62em;
+  > * {
+    margin: 0 1em;
   }
 }
 
